# FEUP-AED

./: README.md
PROJ1/: Airplane.cpp  Airplane.h  AirplaneCompany.cpp  AirplaneCompany.h  Airport.cpp  Airport.h  CMakeLists.txt  Flight.cpp  Flight.h  Interface.cpp  Interface.h  InternalLuggage.cpp  InternalLuggage.h  Luggage.cpp  Luggage.h  Maintenance.cpp  Maintenance.h  Passenger.cpp  Passenger.h  Timetable.cpp  Timetable.h  Transport.cpp  Transport.h  airplanes.txt  clientes.txt  flights.txt  luggage.txt  main.cpp
PROJ1/Nova pasta/: clientes.txt
PROJ2/: .gitignore  CMakeLists.txt  GetDataSet.cpp  GetDataSet.h  InfoSTCP.cpp  InfoSTCP.h  Line.cpp  Line.h  MinHeap.h  Stop.cpp  Stop.h  graph.cpp  graph.h  main.cpp
PROJ2/dataset/: lines.csv  stops.csv
